<resources>
    <string name="app_name">Zonal Desk</string>

    <string name="app_title">Zonal Desk</string>
    <string name="customer_title">Zonal Desk Customer</string>

    <string name="email_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register as new user</string>
    <string name="register_title">Registration</string>


    <string name="upload_button">Chat</string>
    <string name="raise_button">Raise Ticket</string>
    <string name="ticket_button">Ticket Status</string>
    <string name="payment_button">Payment</string>
    <string name="feedback_button">Feedback</string>

    <string name="menu_update">Check Update</string>
    <string name="menu_appinfo">Appinfo</string>
    <string name="register_firstname">FirstName</string>
    <string name="register_lastname">LastName</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_place">Place</string>
    <string name="register_submit">Submit</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key"> </string>

</resources>
