<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CustomerActivity">

    <TextView
        android:id="@+id/customer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/customer_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_tv">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/upload_button" />

        <Button
            android:id="@+id/raise_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/raise_button" />

        <Button
            android:id="@+id/ticket_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ticket_button" />

        <Button
            android:id="@+id/payment_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/payment_button" />

        <Button
            android:id="@+id/feedback_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/feedback_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>